follower following added

--- a/BlogApp/src/main/resources/application.properties
+++ b/BlogApp/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 
 #db specific properties
 #change the MySQL username and Password 
-spring.datasource.url=jdbc:mysql://localhost:3306/blog
+spring.datasource.url=jdbc:mysql://localhost:3306/blogApp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
