localDate added in modules

--- a/BlogApp/src/main/resources/application.properties
+++ b/BlogApp/src/main/resources/application.properties
@@ -1,12 +1,17 @@
+
+
+# MySql username and Password
+spring.datasource.username=root
+spring.datasource.password=root
+
 #changing the server port
 server.port=8080
+
 
 #db specific properties
 #change the MySQL username and Password 
 spring.datasource.url=jdbc:mysql://localhost:3306/blogApp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
 
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
